deployment-tools/dashbase-admin/dashbase_setup_tarball/ingress-web-restauth.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

  labels:
    app: dashbase
    component: ingress
  name: ingress-web
  namespace: dashbase
spec:
  rules:
  - host: web.test.dashbase.io
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 8080
  tls:
  - hosts:
    - web.test.dashbase.io
    secretName: ingress-secret
